@startuml

' configuration
hide circle
skinparam linetype ortho

' user table
entity "user" as user {
  user_id: CHAR(36) [PK]
  --
  username: TEXT [NOT NULL, UNIQUE]
  email: TEXT [NOT NULL, UNIQUE]
  password: TEXT [NOT NULL]
  first_name: TEXT
  last_name: TEXT
}
note right of user
<b>Note:</b> This is the user table.
end note

' role table
entity "role" as role {
  role_id: CHAR(36) [PK]
  --
  name: TEXT [NOT NULL]
}

' user_role table
entity "user_role" as user_role {
  user_role_id: CHAR(36) [PK]
  --
  user_id: CHAR(36) [FK -> user.user_id]
  role_id: CHAR(36) [FK -> role.role_id]
}

' problem table
entity "problem" as problem {
  problem_id: CHAR(36) [PK]
  --
  title: TEXT [NOT NULL]
  description: TEXT [NOT NULL]
  difficulty: TEXT [NOT NULL]
}

' solved_problem table
entity "solved_problem" as solved_problem {
  solved_problem_id: CHAR(36) [PK]
  --
  user_id: CHAR(36) [FK -> user.user_id]
  problem_id: CHAR(36) [FK -> problem.problem_id]
  language_id: CHAR(36) [FK -> language.language_id]
  solution: TEXT [NOT NULL]
}

' language table
entity "language" as language {
  language_id: CHAR(36) [PK]
  --
  name: TEXT [NOT NULL]
}

' relationships
user_role --> user : "user_id"
user_role --> role : "role_id"
solved_problem --> user : "user_id"
solved_problem --> problem : "problem_id"
solved_problem --> language : "language_id"

@enduml
